# terok-shield

./: .gitignore  AGENTS.md  MANIFEST.in  Makefile  README.md  REUSE.toml  mkdocs.yml  pyproject.toml  sonar-project.properties  tach.toml  vulture_whitelist.py
.github/: copilot-instructions.md  dependabot.yml  requirements-ci.txt
.github/workflows/: analysis.yml  ci.yml  docs.yml  integration.yml  release.yml  test-matrix.yml
LICENSES/: Apache-2.0.txt
docs/: DESIGN.md  DEVELOPER.md  SECURITY.md  design.md  developer.md  gen_quality_report.py  gen_ref_pages.py  gen_test_map.py  index.md  security.md  test-map.md
docs/guide/: cli.md  configuration.md  getting-started.md  getting_started.md  index.md  logging.md  modes.md  profiles.md
docs/stylesheets/: extra.css
scripts/: test-map.py
src/terok_shield/: __init__.py  audit.py  cli.py  config.py  dns.py  dnsmasq.py  hardened.py  hook.py  mode_bridge.py  mode_hook.py  nft.py  nft_constants.py  oci_hook.py  podman_info.py  profiles.py  registry.py  run.py  standard.py  state.py  util.py  validation.py
src/terok_shield/resources/: __init__.py  hook_entrypoint.py  shield_probe.py
tests/: test_basic.py  testfs.py  testnet.py
tests/containers/: Containerfile.debian12  Containerfile.debian13  Containerfile.fedora43  Containerfile.podman  Containerfile.ubuntu2404  run-matrix.sh
tests/integration/: conftest.py  helpers.py  test_audit_live.py  test_config_detect.py  test_dns_live.py  test_firewall.py  test_nft_apply.py  test_profiles_live.py  test_shield_probe.py
tests/integration/allow_deny/: README.md  test_cli.py  test_elements.py  test_traffic.py
tests/integration/blocking/: README.md  test_default_deny.py  test_probe.py
tests/integration/bypass/: README.md  test_cli.py  test_lifecycle.py  test_state.py  test_traffic.py
tests/integration/cli/: README.md  test_help.py
tests/unit/: conftest.py  helpers.py  test_api.py  test_api_surface.py  test_assembly.py  test_audit.py  test_audit_logger.py  test_basic.py  test_cli.py  test_config.py  test_dns.py  test_dns_resolver.py  test_dnsmasq.py  test_hardened.py  test_hook.py  test_hook_entrypoint.py  test_hook_executor.py  test_hook_mode_class.py  test_mode_bridge.py  test_mode_hook.py  test_nft.py  test_nft_isolation.py  test_oci_hook.py  test_podman_info.py  test_profile_loader.py  test_profiles.py  test_registry.py  test_ruleset_builder.py  test_run.py  test_shield_facade.py  test_shield_probe.py  test_standard.py  test_state.py  test_util.py  test_validation.py
(+37 files in other folders)
